fix double scrollbar

--- a/src/sections/storage-selector.scss
+++ b/src/sections/storage-selector.scss
@@ -24,11 +24,10 @@
 
 .storage-selector-iframe-full {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   position: absolute;
   border: 0px;
   padding: 0px 0px 50px;
-  background-color: #f4f4f4;
   margin-top: 0;
   overflow: auto;
   @media (max-width: 768px) {
